app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require normalize-rails
 *= require select2
 *= require dataTables/extras/dataTables.responsive
 *= require pul-assets
 *= require_self
 *= require_tree .
 */

$logo_image: 'dss-logo.svg' !default;

$theme-colors: (
  "primary": #337ab7
);

$link-color: #2762ae;

@import 'bootstrap';

@import 'blacklight/blacklight';
// Import for pul-assets, except for modals overrides, which were breaking the modals
@import "bourbon";
@import "susy";
@import "breakpoint";

@import "utils/variables";
@import "utils/mixins";
@import "utils/helpers";
@import "utils/font-stack";

@import "overrides/bootstrap";
@import "overrides/header_navbar";
@import "overrides/dropdowns";
@import "overrides/menu--user";

.navigation {
  z-index: 2;
}

.navbar-brand {
  width: 140px;
  height: 55px;
}

.schedule .schedule--current {
  background: $yellow-light;
}

.banner,
.interior-photo {
  display: none;
}

.container--catalog {
  display: table;
  width: 100%;
}

.facets.sidenav,
.quick-links {
  padding: 0 1em;
}

.menu--secondary a {
  display: block;
  margin-bottom: .5em;
}

main > .container {
  padding: 0 1em;
}

.datatable .limit-width {
  min-width: 100px;
  width: 200px;
  max-width: 200px;
}

.word-break {
  word-break: break-all;
}

.input-group>.search-q {
  width: auto;
  height: 40px;
  margin-top: 0;
}

.lside--catalog,
.content--catalog {
  display: table-cell;
}

.lside--catalog {
  display: table-footer-group;
}

.content--catalog .middle-content {
  display: table-cell;
}

@media (min-width: 768px) {
  main {
    padding: 0 0 2em 0;
  }

  .banner {
    object-fit: cover;
    height: 150px;
    overflow: hidden;
    display: block;
  }

  .lside--catalog {
    width: 260px;
    vertical-align: top;
    display: table-cell;
  }

  .facets.sidenav,
  .quick-links {
    padding: 0 1.5em 0 0;
  }

  .quick-links a {
    text-decoration: underline;
  }
  #sidebar,
  #content {
    padding: 0;
  }

  .constraints-container {
    padding-left: 260px;
  }

  .content--catalog {
    width: auto;
  }

  .content--catalog .middle-content {
    display: table-cell;

    .interior-photo {
      margin: 1em 0;
      display: block;

      img {
        width: 100%;
      }
    }

    &.static {
      ul {
        margin: 1rem 0 1rem 1.75rem;
      }

      li {
        list-style: initial;
      }

      td {
        padding: 0.25rem;
      }
    }
  }

  .content--catalog .right-sidebar {
    display: table-cell;
    width: 260px;
    vertical-align: top;
    padding-left: 1.5em;

    h2,
    h3 {
      display: block;
    }

    .menu--secondary {
      margin-top: 1em;
    }
  }

  .quick-links li {
    margin-bottom: 0.6rem;
  }

}

select::-ms-expand {
  display: none;
}

@media (max-width: 467px) {
  .navbar-right {
    display: none;
  }

  .page_links {
    text-align: center;
    width: 100%;
  }

  .search-widgets {
    padding: 1em;
    text-align: center;
    width: 100%;

    .btn-group {
      float: none;
    }
  }
}

.content--catalog {
  float: initial;
}

.schedule .button {
  margin: 0.5rem 0 1rem;
}

.note {
  margin-top: 1rem;
}

.facet-values .facet-label {
  padding-bottom: 0px;
}

.no-js {
  visibility: hidden;
  opacity: 0;
 }

 .js {
  visibility: visible;
  opacity: 1;
 }

